初步功能调试完成

--- a/src/makefile
+++ b/src/makefile
@@ -10,10 +10,10 @@ CP= cp -f -r
 BIN=SuperVPN
 AR=ar
 
-DFLAGS  = -w -Wall -DDEV_ENCRYPT -DDEBUG  -D_RAW -g -DNAT_PORT_RESERVED
-RFLAGS  = -w -o2 -Wall -DDEV_ENCRYPT -D_RAW -DNAT_PORT_RESERVED
+DFLAGS  = -w -Wall -DDEBUG  -D_RAW -g -DGENERAL_NODE_USER_APP_T
+RFLAGS  = -w -o2 -Wall -D_RAW -DGENERAL_NODE_USER_APP_T
 
-INCLUDE = -I../include -I/usr/include/curl -I/usr/local/ssl/include
+INCLUDE = -I../include -I../include/cJson -I/usr/include/curl -I/usr/local/ssl/include
 
 CFLAGS  = $(DFLAGS)
 CFLAGS += $(INCLUDE)
