--- a/src/makefile-GW
+++ b/src/makefile-GW
@@ -18,11 +18,11 @@ C_OBJ = $(patsubst %.c,${DIR_OBJ}/%.o,$(notdir ${C_SRC}))
 BIN = SuperVPN
 BIN_TARGET = ${DIR_BIN}/${BIN}
 
-DFLAGS  = -w -Wall -DDEBUG  -D_RAW -g -DGENERAL_NODE_USER_APP_S
-RFLAGS  = -w -o2 -Wall -D_RAW -DGENERAL_NODE_USER_APP_S
+DFLAGS  = -w -Wall -DDEBUG  -D_RAW -g -DGENERAL_NODE_USER_APP
+RFLAGS  = -w -o2 -Wall -D_RAW -DGENERAL_NODE_USER_APP
 
 CFLAGS = ${DIR_INC} ${DFLAGS} -fPIC
-LDFLAGS = -lpthread -lcurl -fPIC
+LDFLAGS = -lpthread -lcurl -lmysqlclient -fPIC
 
 ${BIN_TARGET}:${CPP_OBJ} ${C_OBJ}
 	$(CXX) -o $@ $(CPP_OBJ) ${C_OBJ} $(LDFLAGS)
