--- a/src/makefile-SRVS
+++ b/src/makefile-SRVS
@@ -18,8 +18,8 @@ C_OBJ = $(patsubst %.c,${DIR_OBJ}/%.o,$(notdir ${C_SRC}))
 BIN = SuperVPN
 BIN_TARGET = ${DIR_BIN}/${BIN}
 
-DFLAGS  = -w -Wall -DDEBUG  -D_RAW -g -DGENERAL_NODE_USER_APP_S
-RFLAGS  = -w -o2 -Wall -D_RAW -DGENERAL_NODE_USER_APP_S
+DFLAGS  = -w -Wall -DDEBUG  -D_RAW -g
+RFLAGS  = -w -o2 -Wall -D_RAW
 
 CFLAGS = ${DIR_INC} ${DFLAGS} -fPIC
 LDFLAGS = -lpthread -lcurl -fPIC
